@@ -61,3 +61,4 @@
   - added EXCLUDE system variable
   - changed default PLUGIN_MARKDOWN_MATCH=\.(md|txt)$
   - allow array vars for INCLUDE and EXCLUDE variables (e.g. +INCLUDE=foo)
+  - added SORT_STRATEGY=none (no sorting, useful when using INCLUDE)
